[package]
name = "xlxsbuilder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "xlsxbuilder"
crate-type = ["cdylib"]

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"
ar = "x86_64-w64-mingw32-gcc-ar"

[dependencies]
chrono = "0.4.38"
libc = "0.2.159"
rust_xlsxwriter = "0.71.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"